# worst-executor

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
